config/samples/media_v1alpha1_watcher.yaml
apiVersion: v1
kind: Service
metadata:
  name: watcher-service
spec:
  selector:
    app: watcher
  ports:
    - port: 80
      targetPort: 80
