config/samples/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: "redis:7.0"
          ports:
            - containerPort: 6379
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - redis-cli ping
            failureThreshold: 2
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 5
