config/samples/media_v1_central.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: central-sample
spec:
  defaultBackend:
    service:
      name: central-sample-web
      port:
        number: 9019
