config/samples/media_v1alpha1_central.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    name: postgres
spec:
  ports:
  - port: 5432
    targetPort: 5432
    name: postgres
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: "postgres:15.3"
        ports:
        - containerPort: 5432
        livenessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - exec pg_isready -U "postgres" -h 127.0.0.1
          failureThreshold: 2
          initialDelaySeconds: 120
          periodSeconds: 60
          timeoutSeconds: 30
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: central-sample
spec:
  defaultBackend:
    service:
      name: central-sample
      port:
        number: 9019
---
apiVersion: v1
kind: Service
metadata:
  name: streamer
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: streamer
  selector:
    app: streamer
